Fix alignment of preview.

--- a/src/RX.Nyss.Web/ClientApp/src/components/forms/TextInputWithHTMLPreviewField.module.scss
+++ b/src/RX.Nyss.Web/ClientApp/src/components/forms/TextInputWithHTMLPreviewField.module.scss
@@ -1,4 +1,5 @@
 .htmlPreview {
   background-color: #fafafa;
   padding: 10px;
+  margin-top: 30px;
 }
